--- a/index.css
+++ b/index.css
@@ -1,8 +1,22 @@
 body {
-  background-image: url("https://images.pexels.com/photos/461940/pexels-photo-461940.jpeg?auto=compress&cs=tinysrgb&h=350"); /* The image used */
+  background-image: url("http://cdn01.cdn.justjared.com/wp-content/uploads/2013/07/brown-ps22/chris-brown-ps22-chorus-brought-me-to-tears-04.jpg"); /* The image used */
   background-color: #cccccc; /* Used if the image is unavailable */
   height: 500px; /* You must set a specified height */
   background-position: center; /* Center the image */
   background-repeat: no-repeat; /* Do not repeat the image */
   background-size: cover; /* Resize the background image to cover the entire container */
+}
+h1{ color: red; 
+  
+  
+}
+p{ color: white;
+  text-align:center
+  
+}
+li { color: white; 
+  text-align:center;
+}
+div.a {
+    font-size: 150%;
 }
